<resources>
    <string name="app_name">Dib App</string>
    <string name="next">next</string>
    <string name="skip">skip</string>
    <string name="maybe_later">maybe later</string>
    <string name="retry">Retry</string>
    <string name="title_slide_1">Share your knowledge</string>
    <string name="title_slide_2">Share your notes</string>
    <string name="title_slide_3">Start Sharing</string>
    <string name="desc_slide_2">Make available your notes to other students, and take theirs easily</string>
    <string name="desc_slide_3">Use your uniba mail as authentication, or explore app before start.</string>
    <string name="start_with_email">start with email</string>
    <string name="auth_title">Authentication</string>
    <string name="auth_desc">Start using DibApp with your academic email.</string>
    <string name="auth_signin_desc">Your email is already registered.\nEnter your password to continue.</string>
    <string name="auth_signup_desc">Tell us something about yourself before to continue.</string>
    <string name="set_user_profile_desc">Set your preferences\nWe will use these for make better your experience.</string>
    <string name="auth_email_title">Sign In with Email</string>
    <string name="auth_signin_title">Sign In</string>
    <string name="auth_signup_title">Create Account</string>
    <string name="auth_sign_out">Sign out successful</string>
    <string name="email_uniba_regex" translatable="false">\@studenti.uniba.it</string>
    <string name="email_uniba_hint" translatable="false">email\@studenti.uniba.it</string>
    <string name="password_hint" translatable="false">Password</string>
    <string name="password_choice_hint">Choice a Password</string>
    <string name="name_surname_hint">Name and Surname</string>
    <string name="select_degree_course">Degree Course</string>
    <string name="select_courses">Interested Coursers</string>
    <string name="forget_password">Forget Password</string>
    <string name="_continue">continue</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="done">Done</string>
    <string name="nfcAvailable">Follow with NFC enabled</string>
    <string name="nfcNotAvailable">Follow with NFC not available</string>
    <string name="empty_field_error">Field cannot be Empty</string>
    <string name="email_uniba_regex_error">Make sure to use a \@studenti.uniba.it email</string>
    <string name="toStudyVerb">Studies</string>
    <string name="numberNotPresent">Phone number not added</string>
    <string name="email_check_error">Email check failed</string>
    <string name="email_check_message">Checking email&#8230;</string>
    <string name="signin_failed_error">Sign In failed</string>
    <string name="signin_message">Signing in&#8230;</string>
    <string name="signup_failed_error">Sign Up failed</string>
    <string name="signup_message">Creating account&#8230;</string>
    <string-array name="degree_courses_array">
        <item>Informatica</item>
        <item>Informatica e Tecnologie per la Produzione del Software</item>
        <item>Informatica e Comunicazione Digitale</item>
    </string-array>
    <string name="password_length_error">Password must contain at least 6 characters</string>
    <string name="generic_fields_error">Check Fields</string>
    <string name="password_forget_send">Email reset send to </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info Session</string>
    <string name="action_search">Search Session</string>
    <string name="action_map">Session on Map</string>
    <string name="action_edit">Edit</string>
    <string name="action_leave">Leave Session</string>
    <string name="uploading_image">Uploading image&#8230;</string>
    <string name="channel_fragment_title">Channel</string>
    <string name="notes_fragment_title">Notes</string>
    <string name="complete_action">Complete action using</string>
    <string name="bottom_bar_nearme">Near Me</string>
    <string name="add_note_title">Add Note</string>
    <string name="note_details_title">Note Details</string>
    <string name="hint_password" translatable="false">password</string>
    <string name="hint_email" translatable="false">email</string>
    <string name="note_details">Note Details</string>
    <string name="rate_button">Rate</string>
    <string name="notification_download_title" translatable="false">Downloading</string>
    <string name="notification_download_message">Download in progress</string>
    <string name="download_complete">Download complete</string>
    <string name="fail_load_note">Failed to load note</string>
    <string name="download_failure">Failed to download</string>
    <string name="upload_failure">Failed to upload</string>
    <string name="error_title">Minimum title length 3 characters</string>
    <string name="empty_field">Empty field!</string>
    <string name="empty_fields">There are empty fields!</string>
    <string name="error_read_write_ext_sto_permission">You don\'t have permissions!</string>
    <string name="progress_bar_upload_message" translatable="false">Upload…</string>
    <string name="notification_upload_title" translatable="false">Uploading</string>
    <string name="notification_upload_message">Upload in progress</string>
    <string name="upload_complete">Upload complete</string>
    <string name="placeholder_search_file_new_note">Select your file by clicking on the icon</string>
    <string name="new_note_title">Title</string>
    <string name="new_note_degree_course">Degree Course</string>
    <string name="new_note_course">Course</string>
    <string name="new_note_description">Description</string>
    <string name="new_note_cancel_button">Cancel</string>
    <string name="new_note_confirm_button">Done</string>
    <string name="upload_note_failed">Upload note failed.</string>
    <string name="content_description_degree_course" translatable="false">content_description_degree_course</string>
    <string name="content_description_course" translatable="false">content_description_course</string>
    <string name="content_description_timeup" translatable="false">content_description_timeUp</string>
    <string name="content_description_format" translatable="false">content_description_format</string>
    <string name="content_description_downloads" translatable="false">content_description_downloads</string>
    <string name="content_description_views" translatable="false">content_description_views</string>
    <string name="content_description_avatar" translatable="false">content_description_avatar</string>
    <string name="sessions_board">Sessions Board</string>
    <string name="notes_board">Notes Board</string>
    <string name="sessions_map">Sessions Map</string>
    <string name="my_sessions">My Sessions</string>
    <string name="my_notes">My Notes</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="feedback" translatable="false">Feedback</string>
    <string name="note_details_action_button_download">Download</string>
    <string name="note_details_delete_note">Delete note</string>
    <string name="note_details_action_button_add_to_my_notes">Add to My Notes</string>
    <string name="note_details_modify_note">Modify note</string>
    <string name="preference_group_account" translatable="false">Account</string>
    <string name="preference_group_information">Information</string>
    <string name="preference_logout" translatable="false">Logout</string>
    <string name="preference_version">Version</string>
    <string name="preferences_version_summary" translatable="false">1.0</string>
    <string name="introduction_text" translatable="false">DibApp è una applicazione che permette agli studenti di informatica di mettersi in contatto con altri studenti che seguono i suoi stessi corsi e scambiarsi appunti, chattare, chiedere informazioni e creare sessioni di studio dove poter condividere le proprie conoscenze e utilizzare quelle di altri.</string>
    <string name="session_board_text">La bacheca delle sessioni permette di visualizzare le sessioni di studio disponibili in base ai corsi seguiti. Si può scegliere tra le sessioni più vicine, quelle consigliate in base ai propri interessi e quelle più recenti.</string>
    <string name="map_board_text">Allow to show all available sessions</string>
    <string name="notes_board_text">This Board contains all published notes, with the able to view information and download them on your phone.</string>
    <string name="my_notes_text">Handle all notes of user.</string>
    <string name="txtPosizioneClass" translatable="false">123</string>
    <string name="immagine_profilo_utente_classificato">Profile image</string>
    <string name="studente_nome_classifica" translatable="false">Francesco G.</string>
    <string name="manage_account_preference">Manage Account</string>
    <string name="my_sessions_text">Here all sessions where user is participating.</string>
</resources>