<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.uniba.di.ivu.sms16.gruppo2.dibapp.HelpActivity">

    <TextView
        android:id="@+id/introduction_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduction_text" />

    <TextView
        android:id="@+id/session_board_help_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sessions_board"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/session_board_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session_board_text" />

    <TextView
        android:id="@+id/map_board_help_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sessions_map"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/map_board_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_board_text" />

    <TextView
        android:id="@+id/notes_board_help_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/notes_board"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/notes_board_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes_board_text" />

    <TextView
        android:id="@+id/my_sessions_help_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/my_sessions"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/my_sessions_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_sessions_text" />

    <TextView
        android:id="@+id/my_notes_help_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/my_notes"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/my_notes_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_notes_text" />

    <TextView
        android:id="@+id/leaderboard_help_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/leaderboard"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/leaderboard_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
</ScrollView>