<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_slide_3">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_slide_3"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/desc_slide_3"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc" />

        <Button
            android:id="@+id/button_start_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/desc_padding"
            android:layout_marginStart="@dimen/desc_padding"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/start_with_email" />

        <Button
            android:id="@+id/button_maybe_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/slide_marginend_maybe"
            android:layout_marginTop="@dimen/slide_margintop_maybe"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/maybe_later"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_maybe_btn" />

    </LinearLayout>
</RelativeLayout>