<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/desc_padding"
        android:paddingRight="@dimen/desc_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/auth_signup_desc"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/slide_desc" />

        <EditText
            android:id="@+id/email_signup_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@android:color/white"
            android:shadowColor="@color/auth_hint_color"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorHint="@color/auth_hint_color" />

        <EditText
            android:id="@+id/password_signup_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:backgroundTint="@android:color/white"
            android:hint="@string/password_choice_hint"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:shadowColor="@color/auth_hint_color"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorHint="@color/auth_hint_color" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:backgroundTint="@android:color/white"
            android:hint="@string/name_surname_hint"
            android:imeOptions="flagNavigateNext"
            android:inputType="textCapWords"
            android:shadowColor="@color/auth_hint_color"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorHint="@color/auth_hint_color" />

        <AutoCompleteTextView
            android:id="@+id/degree_autocomplete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@android:color/white"
            android:hint="@string/select_degree_course"
            android:imeOptions="actionDone"
            android:shadowColor="@color/auth_hint_color"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorHint="@color/auth_hint_color" />


        <Button
            android:id="@+id/done_signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/sign_up" />


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
